# oop_4term

./: CMakeLists.txt
lab1/: Main.cpp  Matrix.cpp  Matrix.h  task_lab1
lab2/: GroupOfLines.cpp  GroupOfLines.h  Line.cpp  Line.h  Main.cpp  Point.cpp  Point.h  task_lab2
lab3/: Coder.h  Main.cpp  task_lab3.txt
lab4/: Clinic.cpp  Clinic.h  Doctor.cpp  Doctor.h  Main.cpp  Patient.cpp  Patient.h  task_lab4.txt
