cmake_minimum_required(VERSION 3.24)
project(oop_4term)

set(CMAKE_CXX_STANDARD 17)

#for lab1
#add_executable(oop_4term lab1/Main.cpp lab1/Matrix.cpp lab1/Matrix.h lab1/Matrix.cpp)

#for lab2
#add_executable(oop_4term  lab2/Main.cpp lab2/Point.h lab2/Point.cpp lab2/Line.cpp lab2/Line.h lab2/GroupOfLines.h lab2/GroupOfLines.cpp lab3/Main.cpp)

#for lab3
#add_executable(oop_4term lab3/Main.cpp lab3/Coder.h)

#for lab4
add_executable(oop_4term lab4/Main.cpp lab4/Main.cpp lab4/Clinic.h lab4/Clinic.cpp lab4/Patient.cpp lab4/Doctor.h lab4/Doctor.cpp lab4/Patient.h)

